# New-FedEraser

./: .gitignore  README.md
quickstart-pytorch/: evaluate_comparison.py  pyproject.toml
quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py  utils.py
quickstart-pytorch/pytorchexample/strategy/: adaptive_eraser_strategy.py  adaptive_log_strategy.py  eraser_strategy.py  log_strategy.py  retrain_strategy.py  topk_eraser_strategy.py  topk_log_strategy.py
quickstart-pytorch/topk_logs/: saved_rounds.json
